# anythingy

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs  map.rs  small_map.rs
src/: lib.rs  map.rs  small.rs  thing.rs
