[package]
name = "anythingy"
version = "0.1.1"
edition = "2021"
description = "A library for dynamic typing."
license = "MIT"
repository = "https://github.com/wutterfly/anythingy"

[dependencies]


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "map"
harness = false

[[bench]]
name = "small_map"
harness = false
