[package]
name = "anythingy"
version = "0.2.2"
edition = "2024"
description = "A library for dynamic typing."
license = "MIT"
repository = "https://github.com/wutterfly/anythingy"

[dependencies]


[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "map"
harness = false

[[bench]]
name = "small_map"
harness = false
